minor improvements to prepare workspace
